Change images url + Delete Space + Remove Auth Info

--- a/docs/さいごに.md
+++ b/docs/さいごに.md
@@ -4,7 +4,7 @@ sidebar_position: 8
 
 > 下にスクロールしてください。次のページに移動できるボタンがあります。
 
-![さいごに](http://guide.made-by-free.com/images/label_finish.png)
+![さいごに](http://made-by-free.com/images/label_finish.png)
 
 
 ここまでガイドを読んでくださりありがとうございました！きっと、MBFサーバーの全体像がつかめてきたかと思います。
@@ -21,7 +21,7 @@ sidebar_position: 8
 
 また、もしMBFサーバーを気に入ってくださったら、👇寄付についても検討いただけると幸いです。
 
-![寄付](http://guide.made-by-free.com/images/label_donate.png)
+![寄付](http://made-by-free.com/images/label_donate.png)
 当サーバーの運営には、
 - 24時間稼働のマイクラサーバー維持費
 - サイバー攻撃に対するセキュリティ費
@@ -35,12 +35,3 @@ sidebar_position: 8
 ## 寄付への返礼品(特典)について
 
 [👉ここをクリックして『特典ストア』を表示](http://store.made-by-free.com/)
-
-
-:::note
-
-# ガイドが終了しました✅
-## 当ページのタブは閉じていただいて構いません。
-## サーバーへの参加方法は、Discordで確認できます。
-
-:::
