--- a/docs/はじめに.md
+++ b/docs/はじめに.md
@@ -2,29 +2,19 @@
 sidebar_position: 1
 ---
 
-:::tip
-認証が完了しました！ご協力ありがとうございました。
-:::
-
 > 下にスクロールしてください。次のページに移動できるボタンがあります。
 
-![はじめに](http://guide.made-by-free.com/images/label_start.png)
+![はじめに](http://made-by-free.com/images/label_start.png)
 
 Made By Freeサーバー(以下、「MBFサーバー」と表記)へようこそ！
-
 鯖民さん＆運営チーム一同、歓迎いたします🎉
-
 当ガイドページでは、MBFサーバーに関する簡単な説明を行っています。ぜひ最後までご覧ください👀
 
 :::note
 参加費：```無料```
-
 年齢制限：```ルールとマナーを守れる方であれば誰でもOK```
-
 運営理念：```シンプルで自由なサバイバル生活、幅広い年齢層```
-
 規模：```小規模～中規模```
-
 運営形態：```ボランティア```
 :::
 
