--- a/docs/荒らし対策.md
+++ b/docs/荒らし対策.md
@@ -4,14 +4,11 @@ sidebar_position: 6
 
 > 下にスクロールしてください。次のページに移動できるボタンがあります。
 
-![荒らし対策](http://guide.made-by-free.com/images/label_protect.png)
+![荒らし対策](http://made-by-free.com/images/label_protect.png)
 
 当サーバーは、【自衛】が基本となっています。
-
-「自分のアイテムや建物は、自分で守る！」
-
+『自分のアイテムや建物は、自分で守る！』
 窃盗や荒らしをする悪質プレイヤーが悪いのは疑いようがありません。しかし、窃盗や荒らしをされてしまう状態で、ご自身のアイテムや建物を放置するのはやめてください。
-
 当サーバーには、『土地保護』という機能があります。
 チャット欄に
 ```
@@ -26,9 +23,7 @@ sidebar_position: 6
 ## 保護していても荒らされたら？
 
 「【自衛】の土地保護をしたけど、荒らしや窃盗の被害に遭ってしまった」という場合の補填は、当サーバーの治安部隊である『警察チーム』が行っています。
-
 当サーバーではすべてのプレイヤーの行動ログを記録しています。そのログをもとに建物やアイテムを復元いたします。
-
 Discordの『[〔🎫〕お問い合わせ](https://discord.com/channels/960062675012964352/960064578253901854)』からチケットを作成して報告をしていただければ、『警察チーム』がサポートいたします。
 
 :::danger
