--- a/docs/マップ紹介.md
+++ b/docs/マップ紹介.md
@@ -4,21 +4,19 @@ sidebar_position: 2
 
 > 下にスクロールしてください。次のページに移動できるボタンがあります。
 
-![マップ紹介](http://guide.made-by-free.com/images/label_map.png)
+![マップ紹介](http://made-by-free.com/images/label_map.png)
 
 当サーバーでは、鯖民さんの皆さんが快適にサバイバル生活ができるように、３つのサーバーを用意しております👍
 ロビーを経由してすべてのサーバーを行き来できます🎉
 
-![world_map.png](http://guide.made-by-free.com/images/world_map.png)
+![world_map.png](http://made-by-free.com/images/world_map.png)
 
 :::tip
 ロビーからそれぞれのサーバーに移動できます。
 マイクラのチャット欄に
-
 ```
 /a
 ```
-
 と送信すると、サーバー内のどこに居ても、ロビーに戻ってこられます。
 :::
 
