--- a/docs/遊び方.md
+++ b/docs/遊び方.md
@@ -21,6 +21,7 @@ MBFで盛んなことを下に書き並べてみました。
 - [富豪ランキング](http://made-by-free.com/ranking/)でトップランカーになる。
 - **お城やピラミッドなどの巨大建築をする**。
 - 国や**町を作る**。
+- たくさんチャットやVCに参加して、活動スコアを貯める（[詳しくは、ここをクリック](http://made-by-free.com/vc-score)）
 :::
 
 ![syugo1.png](http://made-by-free.com/images/syugo1.png)
