--- a/docs/はじめに.md
+++ b/docs/はじめに.md
@@ -4,7 +4,7 @@ sidebar_position: 1
 
 > 下にスクロールしてください。次のページに移動できるボタンがあります。
 
-![はじめに](http://made-by-free.com/images/label_start.png)
+![はじめに](./img/mbf/label_start.png)
 
 Made By Freeサーバー(以下、「MBFサーバー」と表記)へようこそ！
 鯖民さん＆運営チーム一同、歓迎いたします🎉
