Local Images Complete

--- a/docs/さいごに.md
+++ b/docs/さいごに.md
@@ -4,7 +4,7 @@ sidebar_position: 8
 
 > 下にスクロールしてください。次のページに移動できるボタンがあります。
 
-![さいごに](http://made-by-free.com/images/label_finish.png)
+![さいごに](/img/mbf/label_finish.png)
 
 
 ここまでガイドを読んでくださりありがとうございました！きっと、MBFサーバーの全体像がつかめてきたかと思います。
@@ -21,7 +21,7 @@ sidebar_position: 8
 
 また、もしMBFサーバーを気に入ってくださったら、👇寄付についても検討いただけると幸いです。
 
-![寄付](http://made-by-free.com/images/label_donate.png)
+![寄付](/img/mbf/label_donate.png)
 当サーバーの運営には、
 - 24時間稼働のマイクラサーバー維持費
 - サイバー攻撃に対するセキュリティ費
