--- a/docs/クラン制度.md
+++ b/docs/クラン制度.md
@@ -4,7 +4,7 @@ sidebar_position: 4
 
 > 下にスクロールしてください。次のページに移動できるボタンがあります。
 
-![クラン制度](http://made-by-free.com/images/label_clan.png)
+![クラン制度](/img/mbf/label_clan.png)
 
 先ほどの「遊び方」にも記載はありましたが、MBFサーバーにはクランという制度があります。簡単にいえば、仲のいい人同士でグループを作るシステムです。グループを視覚化することで、より結束が強くなり、クランの名のもとに似た価値観を持っている人が集まり交流の幅も増えます👍
 
@@ -14,13 +14,13 @@ sidebar_position: 4
 ソロプレイで遊んでいて、MBFサーバーで仲良くなった人とクランを新しく結成される方も多くいらっしゃいます。
 
 ###### 📸『Hapiクラン』様の誕生日会♪
-![クランの誕生日会](http://made-by-free.com/images/clan_hapi.webp)
+![クランの誕生日会](/img/mbf/clan_hapi.webp)
 
 ###### 📸『しろクラン』様の花火大会
-![クランの花火大会](http://made-by-free.com/images/clan_siro.webp)
+![クランの花火大会](/img/mbf/clan_siro.webp)
 
 ###### 📸『ひかりクラン』様の拠点での集合写真
-![クランの集合写真](http://made-by-free.com/images/clan_hikari.png)
+![クランの集合写真](/img/mbf/clan_hikari.png)
 
 
 :::tip
