--- a/docs/荒らし対策.md
+++ b/docs/荒らし対策.md
@@ -4,7 +4,7 @@ sidebar_position: 6
 
 > 下にスクロールしてください。次のページに移動できるボタンがあります。
 
-![荒らし対策](http://made-by-free.com/images/label_protect.png)
+![荒らし対策](/img/mbf/label_protect.png)
 
 当サーバーは、【自衛】が基本となっています。
 『自分のアイテムや建物は、自分で守る！』
