--- a/docs/お問い合わせ.md
+++ b/docs/お問い合わせ.md
@@ -4,7 +4,7 @@ sidebar_position: 7
 
 > 読み終わりましたら、当ページの右下部にある黄緑色のボタンを押してください。次のページに移動できます。
 
-![お問い合わせ](http://made-by-free.com/images/label_contact.png)
+![お問い合わせ](/img/mbf/label_contact.png)
 
 初めて入ったコミュニティでは、わからないことがたくさんあるかと思います。
 そこで、MBFサーバーでは先輩の鯖民さんや運営チームの方々に質問や相談を行える場所を、３つご用意しております😊
