--- a/docs/遊び方.md
+++ b/docs/遊び方.md
@@ -4,7 +4,7 @@ sidebar_position: 3
 
 > 下にスクロールしてください。次のページに移動できるボタンがあります。
 
-![遊び方](http://made-by-free.com/images/label_play.png)
+![遊び方](/img/mbf/label_play.png)
 
 たくさんの人と交流できるので遊び方は無限大です！
 MBFで盛んなことを下に書き並べてみました。
@@ -24,5 +24,5 @@ MBFで盛んなことを下に書き並べてみました。
 - たくさんチャットやVCに参加して、活動スコアを貯める（[詳しくは、ここをクリック](http://made-by-free.com/vc-score)）
 :::
 
-![syugo1.png](http://made-by-free.com/images/syugo1.png)
-![syugo3.png](http://made-by-free.com/images/syugo3.png)
+![syugo1.png](/img/mbf/syugo1.png)
+![syugo3.png](/img/mbf/syugo3.png)
