--- a/docs/お問い合わせ.md
+++ b/docs/お問い合わせ.md
@@ -2,32 +2,32 @@
 sidebar_position: 7
 ---
 
-> 読み終わりましたら、当ページの右下部にある黄緑色のボタンを押してください。次のページに移動できます。
+**⬇️ 下にスクロールしてください。次のページに移動できるボタンがあります。**
 
 ![お問い合わせ](/img/mbf/label_contact.png)
 
 初めて入ったコミュニティでは、わからないことがたくさんあるかと思います。
 そこで、MBFサーバーでは先輩の鯖民さんや運営チームの方々に質問や相談を行える場所を、３つご用意しております😊
 
-## ①質問エリア
+## 1⃣ 質問エリア
 
 Discordの『〔🙋〕質問＆相談』チャンネルにて鯖民さんと相談できます。
 稀に運営さんや幹部さんも会話に加わることがありますが、基本は鯖民さん同士で相談をする場所です。チャンネルはDiscordに参加している全ての鯖民さんが閲覧&投稿可能です。
  
-## ②チケット
+## 2⃣ チケット
 
-Discordの『〔🎫〕お問い合わせ』チャンネルにてチケット(個別サポートチャンネル)を作成できます。「方法①」ではどうしても解決できない問題があれば、ご利用ください。こちらは鯖民さんではなく、運営さんや幹部さんが回答してくれます。
+Discordの『〔🎫〕お問い合わせ』チャンネルにてお問い合わせチケット(個別サポートチャンネル)を作成できます。「方法①」ではどうしても解決できない問題があれば、ご利用ください。こちらは鯖民さんではなく、運営さんや幹部さんが回答してくれます。
 
-## ③運営さんへのDM 《緊急時のみ》
+## 3⃣ 運営さんへのDM 《緊急時のみ》
 
 こちらの方法は、**原則使用禁止です**。緊急性や機密性の高い内容を扱う場合にのみご利用ください。
 受付しているDMは、@ke3taro2037 です。
 
 
-:::warning
+:::warning お願い
 Discordの雑談チャンネルには、質問をしないでください。
 :::
 
-:::danger
-運営チーム内での情報共有には心掛けていますが、完璧に行き渡らない部分もあります。したがって、幹部の一人の発言が、必ずしも運営全体の意見を代表するものではございませんので、ご了承ください。
+:::warning 回答について
+運営チーム内での情報共有には心掛けていますが、完璧に行き渡らない部分もあります。したがって、運営チームのうちの一人の発言が、必ずしも運営チーム全体の意見を代表するものではございませんので、ご了承ください。
 :::
