--- a/docs/はじめに.md
+++ b/docs/はじめに.md
@@ -2,30 +2,33 @@
 sidebar_position: 1
 ---
 
-> 下にスクロールしてください。次のページに移動できるボタンがあります。
+**⬇️ 下にスクロールしてください。次のページに移動できるボタンがあります。**
 
 ![はじめに](/img/mbf/label_start.png)
 
-Made By Freeサーバー(以下、「MBFサーバー」と表記)へようこそ！
-鯖民さん＆運営チーム一同、歓迎いたします🎉
-当ガイドページでは、MBFサーバーに関する簡単な説明を行っています。ぜひ最後までご覧ください👀
+# Made By Freeサーバーへようこそ
 
-:::note
-参加費：```無料```
+Made By Freeサーバー(以下、「MBFサーバー」と表記)へようこそ！  
+鯖民さん＆運営チーム一同、歓迎いたします🎉  
+このガイドページでは、MBFサーバーに関する簡単な説明を行っています。ぜひ最後までご覧ください👀
 
-年齢制限：```ルールとマナーを守れる方であれば誰でもOK```
-
-運営理念：```シンプルで自由なサバイバル生活、幅広い年齢層```
-
-規模：```小規模～中規模```
-
-運営形態：```ボランティア```
+:::info サーバー概要
+- **参加費**：`無料`
+- **参加資格**：`ルールとマナーを守れる方であれば誰でも参加OK！`
+- **運営理念**：`シンプル、自由、幅広い年齢層`
+- **運営方針**：`お互いがお互いをリスペクトする優しいコミュニティ`
+- **運営形態**：`ボランティア`
 :::
 
-## ✅MBFサーバーは、こんな方におススメ
 
-- シンプルなサバイバル生活を営みたい方
-- 大人数でありながら純粋なマインクラフトを楽しみたい方
-- コミュニティに参加して、ネットで友達を作りたい方
-- 24時間いつでも遊べるワールドを探している方
-- 人狼ゲームやPvPなどでワイワイ楽しみたい方
+:::info こんな方におススメ！
+
+- 🛠️ シンプルなサバイバル生活を営みたい方  
+- 🎮 大人数でありながら純粋なマインクラフトを楽しみたい方  
+- 🤝 コミュニティに参加して、友達を作りたい方  
+- 🌍 24時間いつでも遊べるワールドを探している方  
+- 🐺 人狼ゲームやPvPなどでワイワイ楽しみたい方  
+
+:::
+
+ぜひ、MBFサーバーで素敵な時間をお過ごしください！✨
