--- a/docs/マップ紹介.md
+++ b/docs/マップ紹介.md
@@ -2,34 +2,42 @@
 sidebar_position: 2
 ---
 
-> 下にスクロールしてください。次のページに移動できるボタンがあります。
+**⬇️ 下にスクロールしてください。次のページに移動できるボタンがあります。**
 
 ![マップ紹介](/img/mbf/label_map.png)
 
-当サーバーでは、鯖民さんの皆さんが快適にサバイバル生活ができるように、３つのサーバーを用意しております👍
-ロビーを経由してすべてのサーバーを行き来できます🎉
+当サーバーでは、鯖民さんの皆さんが快適にサバイバル生活を楽しめるよう、**3つのサーバー**を用意しています。  
+ロビーを経由してすべてのサーバーを行き来できます 🎉
 
-![world_map.png](/img/mbf/world_map.png)
+![ワールドマップ](/img/mbf/world_map.png)
 
-:::tip
-ロビーからそれぞれのサーバーに移動できます。
-マイクラのチャット欄に
+## 🏠 **メインサーバー**
+サバイバル生活の中心となるサーバーです。  
+家や倉庫などの拠点の設営、建築を行う場合はこちらをご利用ください。
+
+## 🌳 **資源サーバー**
+資材集めや探索を楽しむためのサーバーです。  
+**月に1回ワールドが再生成**されるため、物資が枯渇する心配はありません。  
+短期間のサバイバル生活を楽しみたい方にもおすすめです。
+
+## 🛠️ **TTサーバー**
+トラップタワーや巨大レッドストーン回路を作るためのサーバーです。  
+**ゲームモードがハード**のため、村人の治療なども行えます。
+
+:::important １サーバー３ワールドの原則
+メインサーバー、資源サーバー、TTサーバーには、それぞれ以下の3つのワールドが完備されています：
+- 現世ワールド
+- ネザーワールド
+- エンドワールド
+
+それぞれのサーバー/ワールドには、ロビーから移動できます。
+:::
+
+:::tip ロビーに行く方法
+ロビーからそれぞれのサーバーに移動できます。  
+マイクラのチャット欄に以下のコマンドを入力すると、サーバー内のどこに居てもロビーに戻れます：
+
 ```
 /a
 ```
-と送信すると、サーバー内のどこに居ても、ロビーに戻ってこられます。
-:::
-
-## 🏠メインサーバー
-当サーバーでのサバイバル生活の中心となるサーバーです。家や倉庫などの拠点の設営、建築を行う場合はこちらのサーバーをご利用ください。
-
-## 🌳資源サーバー
-資材を集めたり、探索をしたりするサーバーです。月に１回、マップが再生成されるため物資が枯渇することはありません。
-また、発展途上の短期間サバイバル生活を楽しみたい方は、こちらを拠点にすることをオススメします。
-
-## 🛠️TTサーバー
-トラップタワーや巨大レッドストーン回路を作るためのサーバーです。TTサーバーのみ、ゲームモードがハードのため村人の治療なども行えます。
-
-:::important
-メインサーバー、資源サーバー、TTサーバーには、それぞれ現世マップとネザーマップとエンドマップの３つのマップを完備しています。
 :::
