--- a/docs/荒らし対策.md
+++ b/docs/荒らし対策.md
@@ -2,34 +2,62 @@
 sidebar_position: 6
 ---
 
-> 下にスクロールしてください。次のページに移動できるボタンがあります。
-
 ![荒らし対策](/img/mbf/label_protect.png)
 
-当サーバーは、【自衛】が基本となっています。
-『自分のアイテムや建物は、自分で守る！』
-窃盗や荒らしをする悪質プレイヤーが悪いのは疑いようがありません。しかし、窃盗や荒らしをされてしまう状態で、ご自身のアイテムや建物を放置するのはやめてください。
-当サーバーには、『土地保護』という機能があります。
-チャット欄に
-```
-/wg
-```
-と送信すると、ガイドが開始されます。ガイドに従うことで、指定した範囲の土地を保護し、その土地の所有権を獲得することができます。詳しくは[こちらのページ](http://made-by-free.com/worldguard)をご覧ください。
+## 🛡自衛の心構え
+MBFサーバーは多くのプレイヤーが集まるマルチサーバーです。その中には、善良なプレイヤーだけでなく、残念ながら荒らしや窃盗を行う悪質プレイヤーも紛れ込みます。  
+もちろん、これらの行為はルールで厳しく禁止されており、違反者が悪いことは明らかです。しかし、「荒らされたら運営チームに任せればいいや」といった考えで、自衛の努力を怠ることは避けましょう。  
 
-:::tip
-保護された土地では、あなたが許可したプレイヤー以外は、ブロックを設置したり破壊したり、チェストを開いたりができなくなります。
+**『自分のアイテムや建物は、自分で守る！』** という意識を持つことが大切です。以下の対策を参考にして、安心してプレイできる環境を作り上げましょう。
+
+1. **土地保護を必ず行う**  
+    土地保護を設定することで、他のプレイヤーからの干渉を防ぐことができます。手順は[土地保護の方法](#土地保護の方法)をご覧ください。
+
+2. **重要なアイテムは安全な場所に保管する**  
+    貴重なアイテムはエンダーチェストや保護されたチェストに保管してください。
+
+3. **信頼できるプレイヤーとだけ共有する**  
+    土地やチェストのアクセス権限は、信頼できるプレイヤーに限定しましょう。
+
+4. **定期的にログインして状況を確認する**  
+    長期間使っていない場所は、知らず知らずのうちに荒らしや窃盗の被害にあっている可能性があります。定期的に確認を行いましょう。
+
+自衛の意識を持つことで、荒らし被害を未然に防ぐことができます。  
+警察チームの業務削減にご協力ください。
+
+
+## ⛳土地保護の方法
+
+当サーバーには、土地を保護するための機能があります。  
+以下の手順で土地を保護し、所有権を確立してください。
+
+1. チャット欄に以下のコマンドを入力します：
+    ```
+    /wg
+    ```
+2. ガイドが開始されます。指示に従って保護範囲を設定してください。
+3. 詳細な手順は [こちらのページ](http://made-by-free.com/worldguard) をご覧ください。
+
+:::tip 保護をするとどうなるのか？
+保護された土地では、**許可したプレイヤー以外** が以下の行動を取ることができなくなります：
+- ブロックの設置・破壊
+- チェストの開閉
+- MOBの殺害
 :::
 
-## 保護していても荒らされたら？
 
-「【自衛】の土地保護をしたけど、荒らしや窃盗の被害に遭ってしまった」という場合の補填は、当サーバーの治安部隊である『警察チーム』が行っています。
-当サーバーではすべてのプレイヤーの行動ログを記録しています。そのログをもとに建物やアイテムを復元いたします。
-Discordの『[〔🎫〕お問い合わせ](https://discord.com/channels/960062675012964352/960064578253901854)』からチケットを作成して報告をしていただければ、『警察チーム』がサポートいたします。
+## ❓保護していても荒らされた場合
 
-:::danger
+万が一、土地保護をしていても荒らしや窃盗の被害に遭った場合は、『警察』が補填を行います。  
+当サーバーでは、すべてのプレイヤーの行動ログを記録しています。これをもとに建物やアイテムを復元します。
 
-- 荒らしの被害は、マイクラサーバー内のチャット上での報告は行わないでください。
-- 土地保護を行っていない場所はサポート対象外です。
-- 資源ワールドはサポート対象外です。
+### 📜報告手順
+1. Discordの『[〔🎫〕お問い合わせ](https://discord.com/channels/960062675012964352/960064578253901854)』の警察窓口からお問い合わせチケットを作成してください。
+2. 必要な情報（プレイヤー名、被害、座標、どうしてほしいか）を記載し、報告を行ってください。
+3. 『警察』が対応いたします。
 
+:::danger 注意事項
+- **荒らし被害の報告は、マイクラサーバー内のチャット上で行わないでください。**
+- **土地保護を行っていない場所** はサポート対象外です。
+- **資源ワールド** はサポート対象外です。
 :::
