--- a/docs/遊び方.md
+++ b/docs/遊び方.md
@@ -2,27 +2,25 @@
 sidebar_position: 3
 ---
 
-> 下にスクロールしてください。次のページに移動できるボタンがあります。
+**⬇️ 下にスクロールして、次のページに移動できるボタンを探してください。**
 
 ![遊び方](/img/mbf/label_play.png)
+たくさんの人と交流できるので、遊び方は無限大です！  
+以下に、MBFで楽しめる活動をいくつかご紹介します。
+- 🏠 **自分の家を建てる**
+- 🔄 **ほかのプレイヤーと物々交換をする**
+- 🛡️ **ギルドに参加する**
+- 🐉 **ウィザーやエンダードラゴン、ダンジョンを攻略する**
+- ⚙️ **トラップタワーを作成する**
+- ⛏️ **大規模なチャンク堀りや整地をする**
+- 🤝 **村人交易場を作る**
+- 🎨 **好きなアニメやゲームのドット絵を作る**
+- 💰 [**富豪ランキング**](http://made-by-free.com/ranking/)でトップランカーを目指す
+- 🏰 **お城やピラミッドなどの巨大建築をする**
+- 🌍 **国や町を作る**
+- 💬 [**チャットやVCに参加して活動スコアを貯める**](http://made-by-free.com/vc-score)
 
-たくさんの人と交流できるので遊び方は無限大です！
-MBFで盛んなことを下に書き並べてみました。
-:::tip
-- 自分の**家**を建てる。
-- ほかのプレイヤーさんと**物々交換をする**。
-- クランに参加する。
-- ウィザーやエンダードラゴン、ダンジョンを攻略する。
-- トラップタワーを作成する。
-- 大規模なチャンク堀りをする。
-- 大規模な整地をする。
-- 村人交易場を作る。
-- **好きなアニメやゲームのドット絵を作る**。
-- [富豪ランキング](http://made-by-free.com/ranking/)でトップランカーになる。
-- **お城やピラミッドなどの巨大建築をする**。
-- 国や**町を作る**。
-- たくさんチャットやVCに参加して、活動スコアを貯める（[詳しくは、ここをクリック](http://made-by-free.com/vc-score)）
-:::
-
+:::important ギャラリー
 ![syugo1.png](/img/mbf/syugo1.png)
 ![syugo3.png](/img/mbf/syugo3.png)
+:::
