Graduatioin Update fixed

--- a/docs/ギルド制度.md
+++ b/docs/ギルド制度.md
@@ -2,6 +2,8 @@
 sidebar_position: 4
 ---
 
+**⬇️ 下にスクロールしてください。次のページに移動できるボタンがあります。**
+
 ![ギルド制度](/img/mbf/label_guild.png)
 
 MBFサーバーには「ギルド」という制度があります。これは、仲の良い人同士でグループを作るシステムです。ギルドを通じて、結束力が高まり、似た価値観を持つ人々が集まり、交流の幅が広がります。👍
