--- a/docs/その他.md
+++ b/docs/その他.md
@@ -57,6 +57,6 @@ sidebar_position: 10
 - コンテンツのタイトルもしくは概要欄に、当サーバーの名前（「MBFサーバー」や「Made By Freeサーバー」）を記載すること。
 - コンテンツは、当サーバーを批判する内容でないこと。
 
-最新の注意事項は、[公式サイトの『ルール』ページ](http://made-by-free.com/rule)の「諸注意」の「配信や動画投稿をする方へ」をご覧ください。
+最新の注意事項は、[公式サイト](http://made-by-free.com/)の「配信や動画投稿をする方へ」をご覧ください。
 :::
 
