--- a/docs/運営体制.md
+++ b/docs/運営体制.md
@@ -19,13 +19,13 @@ sidebar_position: 9
 | ギルド主   | ギルドの運営             | 鯖民組合  |
 | 案内係   | 新規さんのご案内＆Discordの『質問＆相談』チャンネルの対応                    | 鯖民  |
 
-※区分について ➡ 鯖民組合は、申請/任命が必要な役職です。鯖民は、審査なしの役職です。
+※区分について ➡ 「運営/幹部/鯖民組合」は、申請/任命が必要な役職です。「鯖民」は、審査なしの役職です。
 
 ## 🧭運営方針
 運営当初から３年以上守ってきた３つの運営理念を、今後も守っていくことはもちろんのこと、お互いがリスペクトしあう優しいコミュニティ作りを行っていきたいと考えています。
 
 運営チームの皆さんは、現実世界でのお仕事や学業がお忙しい中で、鯖民の皆さんが楽しめるように無償でメンテナンス・治安維持・企画・開発・広報活動を行ってくださっています。**運営チームの皆さんへの感謝の気持ちを忘れないようにしてください。**
-そして、数あるマルチサーバーの中で、MBFサーバーを選んで遊びに来てくださった**鯖民の皆さんにも感謝の気持ちを忘れないようにしてください**。
+そして、数あるマルチサーバーの中で、MBFサーバーを選んで遊びに来てくださった**鯖民の皆さんにも感謝の気持ちを忘れません**。
 **お互いがお互いをリスペクトし合う、そんなコミュニティを作っていきたいと考えています。**
 
 :::warning お断り
